force-app/main/default/objects/Partition__c/Partition__c.object-meta.xml
<CustomObject>
    <description>Child object of Hardware__c for managing license keys and partition configurations. Used for tracking software partitions, license keys, and activation details for hardware infrastructure.</description>
    <label>Partition</label>
    <nameField>
        <displayFormat>PART-{0000}</displayFormat>
        <label>Partition Name (Record)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>