force-app/main/default/objects/Partition__c/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <description>Date when the partition and its license key were activated.</description>
    <inlineHelpText>Date when this partition was activated in the system.</inlineHelpText>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>