force-app/main/default/objects/Partition__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Date when the partition license expires. Used for renewal tracking and automated expiration workflows.</description>
    <inlineHelpText>Date when this partition&apos;s license will expire. Leave blank for perpetual licenses.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>