force-app/main/default/objects/Partition__c/fields/Hardware__c.field-meta.xml
<CustomField>
    <fullName>Hardware__c</fullName>
    <description>Master-Detail relationship to parent Hardware__c record. Each partition belongs to a single hardware instance.</description>
    <label>Hardware</label>
    <referenceTo>Hardware__c</referenceTo>
    <relationshipLabel>Hardware Partitions</relationshipLabel>
    <relationshipName>Hardware_Partitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>