force-app/main/default/objects/Partition__c/fields/License_Key__c.field-meta.xml
<CustomField>
    <fullName>License_Key__c</fullName>
    <description>Encrypted license key for the partition. Protected field for sensitive licensing information.</description>
    <inlineHelpText>Software license key for this partition. This field is encrypted and masked for security.</inlineHelpText>
    <label>License Key</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>