force-app/main/default/objects/Partition__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Additional notes and details about the partition configuration, licensing, or special requirements.</description>
    <inlineHelpText>Free-form notes about this partition, including configuration details, special requirements, or historical information.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>