force-app/main/default/objects/Partition__c/fields/Number_of_Processors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Processors__c</fullName>
    <description>Number of processors allocated to this partition (LPAR)</description>
    <label># of Processors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>