force-app/main/default/objects/Partition__c/fields/Partition_ID__c.field-meta.xml
<CustomField>
    <fullName>Partition_ID__c</fullName>
    <description>Unique identifier for the partition. Used for external system integration and license key generation. Auto-generated or manually entered.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for this partition. Used for license key management and external system integration.</inlineHelpText>
    <label>Partition ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>