force-app/main/default/objects/Partition__c/fields/Partition_Name__c.field-meta.xml
<CustomField>
    <fullName>Partition_Name__c</fullName>
    <description>User-editable name for the partition</description>
    <label>Partition Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>