force-app/main/default/objects/Partition__c/fields/Partition_Number__c.field-meta.xml
<CustomField>
    <fullName>Partition_Number__c</fullName>
    <description>LPAR partition number identifier</description>
    <label>Partition Number (LPAR)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>